<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" android:id="@+id/stepWrapperContacts"
    android:visibility="gone">
    <TextView
                        android:id="@+id/textView1"
                        style="@style/TextoCabecera"
                        android:text="@string/registro2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
                        android:id="@+id/textView2"
                        style="@style/TextoInstruccion"
                        android:text="@string/ingreseContactos" />

</LinearLayout>

    <ListView
        android:id="@+id/lvContactos"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnWrapperContacts"
        android:layout_below="@+id/stepWrapperContacts" >

</ListView>
  <LinearLayout
            android:id="@+id/btnWrapperContacts"
            style="@style/panelAcciones"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnCancelarContactos"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/btnAceptarContactos"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Continuar" />
        </LinearLayout>
</RelativeLayout>